--- a/app/globals.css
+++ b/app/globals.css
@@ -39,6 +39,10 @@
     @apply font-semibold my-2 md:my-0 hover:text-transparent-gradient md:hover:outline-0
     hover:outline hover:outline-dark-primary dark:hover:outline-light-primary md:ml-[2rem] 
   }
+
+  .aboutText {
+    @apply text-truncate
+  }
 }
 
 @layer utilities {
@@ -76,6 +80,17 @@
     background-size: 200%;
     background-position: 0 0;
     transition: .5s ease;
+  }
+
+  .text-truncate {
+    overflow: hidden;
+    display: -webkit-box;
+    -webkit-line-clamp: 4;
+    -webkit-box-orient: vertical;
+  }
+
+  .text-truncate::after {
+    content: '\2026';
   }
 }
 
